# langchain-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build-backend.yaml  build.yaml  deploy.yaml  destroy.yaml  wc-build-push.yaml  wc-deploy.yaml
app/: chain.py  server.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: chain.py  config.py  server.py
frontend/: Dockerfile  Dockerfile.prod  package.json
frontend/src/: App.js  index.js  simple_app.css  simple_app.js  simple_app_old.js
infra/: .tfignore  main.tf  outputs.tf  providers.tf  variables.tf
infra/app/: .tfignore  main.tf  outputs.tf
infra/app/modules/app_config/: main.tf
infra/app/modules/ecs/: alb.tf  data.tf  dns.tf  efs.tf  main.tf  security_groups.tf  variables.tf
infra/app/modules/ecs_ec2/: alb.tf  ec2.tf  ec2_old.tf  variables.tf
infra/backend/: main.tf  providers.tf
infra/backend/backend/: backend.tfvars
infra/backend/modules/ecs/: main.tf
infra/backend/modules/ecs_ec2/: ec2.tf  ecs.tf  efs.tf  iam.tf  outputs.tf  sg.tf
infra/common/: .terraform.lock.hcl  ecr.tf  iam.tf  main.tf  providers.tf  route_53.tf
infra/common/backend/: backend.tfvars
infra/frontend/: main.tf  outputs.tf
infra/frontend/backend/: backend.tfvars
infra/modules/ecs/: alb.tf  data.tf  efs.tf  main.tf  outputs.tf  security_groups.tf
infra/scripts/: setup.sh
nbs/: nomic_embedding_rag.ipynb  simple_chain.ipynb
scripts/: build-push-local.sh  build-push.sh  deploy-all.sh  destroy-all.sh
(+10 files in other folders)
