[tool.poetry]
name = "langchain-app"
version = "0.1.0"
description = ""
authors = ["Felix Stephenson <felix.s@hotmail.co.uk>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain-nomic = "^0.0.1"
langchain-community = "^0.0.17"
tiktoken = "^0.5.2"
langchain-openai = "^0.0.5"
chromadb = "^0.4.22"
langchain = "^0.1.5"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
jupyter = "^1.0.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
